k8s/gryphon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gryphon
spec:
  rules:
  - host: gryphon.192.168.99.100.nip.io
    http:
      paths:
      - path: /oauth
        pathType: Prefix
        backend:
          service:
            name: authorizer-service
            port:
              number: 80
      - path: /backend-app
        pathType: Prefix
        backend:
          service:
            name: backend-app-service
            port:
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: swagger-ui-service
            port:
              number: 80
